feat: Merged login/logout with signup
