# docs/swagger.json
@@ -1,13 +1,16 @@
 {
     "swagger": "2.0",
     "info": {
+        "description": "This is simple oxic server",
         "title": "Swagger Oxic API",
         "contact": {}
     },
     "host": "oxic.swagger.io",
     "basePath": "/",
     "paths": {
+        "/login": {
             "post": {
+                "description": "Проверяет учетные данные пользователя и создает сессию при успешной аутентификации",
                 "consumes": [
                     "application/json"
                 ],
@@ -17,29 +20,125 @@
                 "tags": [
                     "auth"
                 ],
+                "summary": "Логин пользователя",
                 "parameters": [
                     {
+                        "description": "Данные пользователя",
+                        "name": "user",
                         "in": "body",
                         "required": true,
                         "schema": {
+                            "$ref": "#/definitions/db.User"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
+                        "description": "Успешный вход",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "400": {
+                        "description": "Неправильный запрос",
                         "schema": {
+                            "type": "string"
                         }
                     },
+                    "401": {
+                        "description": "Неправильные учетные данные",
                         "schema": {
+                            "type": "string"
                         }
                     },
                     "500": {
+                        "description": "Ошибка при создании сессии",
                         "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/logout": {
+            "post": {
+                "description": "Завершает сессию пользователя, очищая куки и удаляя все значения из сессии",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Логаут пользователя",
+                "responses": {
+                    "200": {
+                        "description": "Вы успешно вышли",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Пользователь не авторизован",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Ошибка при завершении сессии",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/signup": {
+            "post": {
+                "description": "This endpoint creates a new user in the system",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Signup a new user",
+                "parameters": [
+                    {
+                        "description": "Signup Request Body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.credsApiRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request",
+                        "schema": {
+                            "$ref": "#/definitions/errs.HTTPErrorResponse"
+                        }
+                    },
+                    "409": {
+                        "description": "User already exists",
+                        "schema": {
+                            "$ref": "#/definitions/errs.HTTPErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/errs.HTTPErrorResponse"
                         }
                     }
                 }
@@ -47,8 +146,34 @@
         }
     },
     "definitions": {
+        "db.User": {
             "type": "object",
             "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "errs.HTTPErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error_code": {
+                    "type": "integer"
+                },
+                "error_message": {
+                    "type": "string"
+                }
+            }
+        },
+        "handlers.credsApiRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
                 "password": {
                     "type": "string"
                 },
