# handlers/auth.go
@@ -1,33 +1,35 @@
 package handlers
 
 import (
-	"encoding/json"
-	"log"
-	"net/http"
-
 	"2024_2_kotyari/config"
 	"2024_2_kotyari/db"
+	"2024_2_kotyari/errs"
+	"encoding/json"
 	"github.com/gorilla/sessions"
+	"log"
+	"net/http"
 )
 
-// respondWithError отправляет JSON ответ с ошибкой и устанавливает код статуса HTTP
-func respondWithError(w *http.ResponseWriter, code int, message string) {
-	(*w).WriteHeader(code) // Устанавливаем HTTP статус-код
-	writeJSON(*w, HTTPErrorResponse{
-		ErrorCode:    code,
-		ErrorMessage: message,
-	})
-}
-
 // validateCredentials проверяет учетные данные пользователя
-func validateCredentials(w *http.ResponseWriter, creds loginApiRequest) bool {
+func validateCredentials(w *http.ResponseWriter, creds credsApiRequest) bool {
 	switch {
 	case !isValidEmail(creds.Email):
-		respondWithError(w, http.StatusBadRequest, ErrInvalidEmailFormat.Error())
+		writeJSON(*w, errs.HTTPErrorResponse{
+			ErrorCode:    http.StatusBadRequest,
+			ErrorMessage: errs.InvalidEmailFormat.Error(),
+		})
 		return false
 	case !isValidPassword(creds.Password):
-		respondWithError(w, http.StatusBadRequest, ErrInvalidPasswordFormat.Error())
+		writeJSON(*w, errs.HTTPErrorResponse{
+			ErrorCode:    http.StatusBadRequest,
+			ErrorMessage: errs.InvalidPasswordFormat.Error(),
+		})
 		return false
+	case !isValidUsername(creds.Username):
+		writeJSON(*w, errs.HTTPErrorResponse{
+			ErrorCode:    http.StatusBadRequest,
+			ErrorMessage: errs.InvalidUsernameFormat.Error(),
+		})
 	}
 	return true
 }
@@ -55,10 +57,13 @@ func NewServer(cfg *config.Config) *Server {
 // @Failure 500 {string} string "Ошибка при создании сессии"
 // @Router /login [post]
 func (s *Server) LoginHandler(w http.ResponseWriter, r *http.Request) {
-	var creds loginApiRequest
+	var creds credsApiRequest
 	err := json.NewDecoder(r.Body).Decode(&creds)
 	if err != nil {
-		respondWithError(&w, http.StatusInternalServerError, ErrInternalServerError.Error())
+		writeJSON(w, errs.HTTPErrorResponse{
+			ErrorCode:    http.StatusInternalServerError,
+			ErrorMessage: errs.InternalServerError.Error(),
+		})
 		return
 	}
 
@@ -68,13 +73,19 @@ func (s *Server) LoginHandler(w http.ResponseWriter, r *http.Request) {
 
 	user, exists := db.GetUserByEmail(creds.Email)
 	if !exists || user.Password != creds.Password {
-		respondWithError(&w, http.StatusUnauthorized, ErrUnauthorizedCredentials.Error())
+		writeJSON(w, errs.HTTPErrorResponse{
+			ErrorCode:    http.StatusUnauthorized,
+			ErrorMessage: errs.UnauthorizedCredentials.Error(),
+		})
 		return
 	}
 
 	session, err := s.sessions.Get(r, config.GetSessionName())
 	if err != nil {
-		respondWithError(&w, http.StatusInternalServerError, ErrSessionCreationError.Error())
+		writeJSON(w, errs.HTTPErrorResponse{
+			ErrorCode:    http.StatusInternalServerError,
+			ErrorMessage: errs.SessionCreationError.Error(),
+		})
 		return
 	}
 
@@ -83,10 +94,15 @@ func (s *Server) LoginHandler(w http.ResponseWriter, r *http.Request) {
 	if err != nil {
 		log.Printf("error saving session: %v", err)
 		log.Println("sessions: ", session)
-		respondWithError(&w, http.StatusInternalServerError, ErrSessionSaveError.Error())
+		writeJSON(w, errs.HTTPErrorResponse{
+			ErrorCode:    http.StatusInternalServerError,
+			ErrorMessage: errs.SessionSaveError.Error(),
+		})
 		return
 	}
 
+	/// TODO: Исправить логику writeJSON
+	writeJSON(w, http.StatusOK)
 	w.WriteHeader(http.StatusOK)
 }
 
@@ -103,7 +119,7 @@ func (s *Server) LogoutHandler(w http.ResponseWriter, r *http.Request) {
 	// Получаем сессию из запроса
 	session, err := s.sessions.Get(r, config.GetSessionName())
 	if err != nil {
-		http.Error(w, ErrUnauthorizedMessage.Error(), http.StatusUnauthorized)
+		http.Error(w, errs.UnauthorizedMessage.Error(), http.StatusUnauthorized)
 		return
 	}
 	// Очищаем значения сессии, создавая новую пустую мапу
@@ -115,17 +131,7 @@ func (s *Server) LogoutHandler(w http.ResponseWriter, r *http.Request) {
 	// Сохраняем изменения сессии
 	err = s.sessions.Save(r, w, session)
 	if err != nil {
-		http.Error(w, ErrLogoutError.Error(), http.StatusInternalServerError)
+		http.Error(w, errs.LogoutError.Error(), http.StatusInternalServerError)
 		return
 	}
-}
-
-// writeJSON отправляет JSON ответ
-func writeJSON(w http.ResponseWriter, data interface{}) {
-	w.Header().Set("Content-Type", "application/json")
-	err := json.NewEncoder(w).Encode(data)
-	if err != nil {
-		http.Error(w, ErrInternalServerError.Error(), http.StatusInternalServerError)
-	}
-
 }
